--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-burger-menu": "^3.0.9",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-multi-select-component": "^4.3.4",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.28.0",
