--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-burger-menu": "^3.0.9",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
